[gd_scene load_steps=62 format=3 uid="uid://b7d0hpqe25dok"]

[ext_resource type="Script" path="res://Scenes/Characters/Tamaki/Tamaki2D/Tamaki.gd" id="1_6bby0"]
[ext_resource type="Resource" uid="uid://4olujvpwjpxo" path="res://Scenes/Characters/Tamaki/TamaStats.tres" id="2_262bs"]
[ext_resource type="Texture2D" uid="uid://cyxy07xpdoigs" path="res://Assets/Characters/Tamaki/Tamaki2D/Tamaki.png" id="3_thsv2"]
[ext_resource type="PackedScene" uid="uid://b67rcvhl30bxe" path="res://Scenes/Weapons, Tools, and Spells/Weapons/Katana.tscn" id="4_ixbi6"]
[ext_resource type="Animation" uid="uid://bkhm4tu6uts41" path="res://Assets/Characters/Tamaki/Tamaki2D/Status/Damaged.res" id="5_hqaqf"]
[ext_resource type="AnimationLibrary" uid="uid://cdp5p8m1c50om" path="res://Assets/Characters/Tamaki/Tamaki2D/Idle/Tamaki Idle Animations.res" id="6_s55vh"]
[ext_resource type="AnimationLibrary" uid="uid://ll804yqmkmgd" path="res://Assets/Characters/Tamaki/Tamaki2D/Katana/Tamaki Katana Animations.res" id="7_d0sy1"]
[ext_resource type="AnimationLibrary" uid="uid://iv586r1pdo85" path="res://Assets/Characters/Tamaki/Tamaki2D/Shuriken/Tamaki Shuriken Animations.res" id="8_7l5tw"]
[ext_resource type="AnimationLibrary" uid="uid://wx8vlh5gslme" path="res://Assets/Characters/Tamaki/Tamaki2D/Stealth/Stealth.res" id="9_sxt66"]
[ext_resource type="AnimationLibrary" uid="uid://bptwvxhu2e1gl" path="res://Assets/Characters/Tamaki/Tamaki2D/Walk/Tamaki Walking Animations.res" id="10_2xtj4"]
[ext_resource type="Script" path="res://Scenes/GUI/UI.gd" id="11_q16l3"]
[ext_resource type="Script" path="res://Scenes/GUI/Buttons/HotBar.gd" id="12_sa5fx"]
[ext_resource type="Texture2D" uid="uid://cvdruxx1onap4" path="res://Assets/Items/Bone.png" id="17_f6xao"]
[ext_resource type="Texture2D" uid="uid://cx4be1qko1oo8" path="res://Assets/Items/Branch.png" id="18_5k20v"]
[ext_resource type="PackedScene" uid="uid://dfhphffc1sml0" path="res://Scenes/GUI/CharacterSheet.tscn" id="19_tfv02"]
[ext_resource type="Script" path="res://Scenes/GUI/SubViewport.gd" id="20_3j1ig"]
[ext_resource type="PackedScene" uid="uid://ciyug6i7bkol4" path="res://Scenes/Locations/TutorialArea.tscn" id="21_g8y4q"]
[ext_resource type="SpriteFrames" uid="uid://dcfrlgc7sr4h3" path="res://Assets/Characters/Tamaki/Tamaki2D/TamakiOld.tres" id="22_hsl8u"]
[ext_resource type="Script" path="res://Scenes/GUI/minimapTama.gd" id="23_ag8cs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2vpk7"]
height = 36.0

[sub_resource type="Animation" id="Animation_53nl4"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Weapons/Katana:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Weapons/Katana:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Weapons/Katana:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Weapons/Katana:monitoring")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Weapons/Katana:monitorable")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfd2d"]
_data = {
"Damaged": ExtResource("5_hqaqf"),
"RESET": SubResource("Animation_53nl4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_anjct"]
animation = &"Idle Animations/Idle Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_maeg8"]
animation = &"Idle Animations/Idle Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m7eov"]
animation = &"Idle Animations/Idle Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5okgh"]
animation = &"Idle Animations/Idle Down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ji4o5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_anjct")
blend_point_0/pos = Vector2(-1.1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_maeg8")
blend_point_1/pos = Vector2(1.1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_m7eov")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_5okgh")
blend_point_3/pos = Vector2(0.0024, 1.1)
min_space = Vector2(-1.5, -1.5)
max_space = Vector2(1.5, 1.5)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hhtfw"]
animation = &"Katana Animations/Swing Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vk2cs"]
animation = &"Katana Animations/Swing Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ikdw"]
animation = &"Katana Animations/Swing Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2q80o"]
animation = &"Katana Animations/Swing Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2ck3n"]
blend_point_0/node = SubResource("AnimationNodeAnimation_hhtfw")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_vk2cs")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_4ikdw")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_2q80o")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.5, -1.5)
max_space = Vector2(1.5, 1.5)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_76cps"]
animation = &"Shuriken Animations/Shuriken Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ipi6"]
animation = &"Shuriken Animations/Shuriken Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uisgg"]
animation = &"Shuriken Animations/Shuriken Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m1ega"]
animation = &"Shuriken Animations/Shuriken Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_m4fms"]
blend_point_0/node = SubResource("AnimationNodeAnimation_76cps")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_4ipi6")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_uisgg")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_m1ega")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.1, -1.1)
max_space = Vector2(1.1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sovsb"]
animation = &"Walking Animations/Walk Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ctwf4"]
animation = &"Walking Animations/Walk Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ogmho"]
animation = &"Walking Animations/Walk Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_053g5"]
animation = &"Walking Animations/Walk Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8pgxw"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sovsb")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ctwf4")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ogmho")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_053g5")
blend_point_3/pos = Vector2(-1.1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6yxvs"]
advance_mode = 2
advance_condition = &"Swing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sxoad"]
switch_mode = 2
advance_mode = 2
advance_condition = &"Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wvl05"]
advance_mode = 2
advance_condition = &"Throw"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sjrdr"]
switch_mode = 2
advance_mode = 2
advance_condition = &"Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c0bpd"]
advance_mode = 2
advance_condition = &"Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8d0i1"]
advance_mode = 2
advance_condition = &"Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1hu2t"]
switch_mode = 2
advance_mode = 2
advance_condition = &"Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_va65i"]
switch_mode = 2
advance_mode = 2
advance_condition = &"Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4vbpn"]
advance_mode = 2
advance_condition = &"Swing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q3gqy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_03px5"]
advance_mode = 2
advance_condition = &"Throw"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6vfh3"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_ji4o5")
states/Idle/position = Vector2(378, 143)
states/Katana/node = SubResource("AnimationNodeBlendSpace2D_2ck3n")
states/Katana/position = Vector2(536, 46)
states/Shuriken/node = SubResource("AnimationNodeBlendSpace2D_m4fms")
states/Shuriken/position = Vector2(531, 219)
states/Start/position = Vector2(190, 143)
states/Walking/node = SubResource("AnimationNodeBlendSpace2D_8pgxw")
states/Walking/position = Vector2(723, 132)
transitions = ["Idle", "Katana", SubResource("AnimationNodeStateMachineTransition_6yxvs"), "Katana", "Idle", SubResource("AnimationNodeStateMachineTransition_sxoad"), "Idle", "Shuriken", SubResource("AnimationNodeStateMachineTransition_wvl05"), "Shuriken", "Idle", SubResource("AnimationNodeStateMachineTransition_sjrdr"), "Idle", "Walking", SubResource("AnimationNodeStateMachineTransition_c0bpd"), "Walking", "Idle", SubResource("AnimationNodeStateMachineTransition_8d0i1"), "Shuriken", "Walking", SubResource("AnimationNodeStateMachineTransition_1hu2t"), "Katana", "Walking", SubResource("AnimationNodeStateMachineTransition_va65i"), "Walking", "Katana", SubResource("AnimationNodeStateMachineTransition_4vbpn"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_q3gqy"), "Walking", "Shuriken", SubResource("AnimationNodeStateMachineTransition_03px5")]
graph_offset = Vector2(-16, -83)

[sub_resource type="InputEventKey" id="InputEventKey_s7vct"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="InputEventKey" id="InputEventKey_pmwf1"]
device = -1
keycode = 32
physical_keycode = 32
key_label = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_1rjks"]
events = [SubResource("InputEventKey_s7vct"), SubResource("InputEventKey_pmwf1")]

[sub_resource type="InputEventKey" id="InputEventKey_mqpto"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_8enot"]
events = [SubResource("InputEventKey_mqpto")]

[sub_resource type="InputEventKey" id="InputEventKey_sjwr8"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_3fqht"]
events = [SubResource("InputEventKey_sjwr8")]

[node name="Tamaki" type="CharacterBody2D" groups=["Tamaki"]]
z_index = 2
y_sort_enabled = true
texture_filter = 1
scale = Vector2(0.5, 0.5)
collision_mask = 15
slide_on_ceiling = false
script = ExtResource("1_6bby0")
tamastats = ExtResource("2_262bs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_2vpk7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
limit_left = 7
limit_top = 23
limit_right = 1152
limit_bottom = 1130

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 2)
texture = ExtResource("3_thsv2")
hframes = 10
vframes = 13
region_rect = Rect2(14, 10, 37, 48)

[node name="Weapons" type="Node2D" parent="."]

[node name="WeaponMarker" type="Marker2D" parent="Weapons"]
unique_name_in_owner = true

[node name="Katana" parent="Weapons" instance=ExtResource("4_ixbi6")]
visible = false
monitoring = false
monitorable = false

[node name="Shurikens" type="Node2D" parent="Weapons"]

[node name="Castbar" type="ProgressBar" parent="Weapons"]
visible = false
modulate = Color(0.968627, 1, 0, 1)
offset_left = -24.0
offset_top = -34.0
offset_right = 26.0
offset_bottom = -7.0
scale = Vector2(1.02905, 0.412328)

[node name="Timers" type="Node" parent="."]

[node name="WeaponCooldown" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Cast" type="Timer" parent="Timers"]

[node name="Regeneration" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="Damaged" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="Areas" type="Node2D" parent="."]

[node name="Tamaki Hitbox" type="Area2D" parent="Areas" groups=["TamakiHitbox"]]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Tamaki Hitbox"]
shape = SubResource("CapsuleShape2D_2vpk7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kfd2d"),
"Idle Animations": ExtResource("6_s55vh"),
"Katana Animations": ExtResource("7_d0sy1"),
"Shuriken Animations": ExtResource("8_7l5tw"),
"Stealth": ExtResource("9_sxt66"),
"Walking Animations": ExtResource("10_2xtj4")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kfd2d"),
"Idle Animations": ExtResource("6_s55vh"),
"Katana Animations": ExtResource("7_d0sy1"),
"Shuriken Animations": ExtResource("8_7l5tw"),
"Stealth": ExtResource("9_sxt66"),
"Walking Animations": ExtResource("10_2xtj4")
}
tree_root = SubResource("AnimationNodeStateMachine_6vfh3")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/Idle = false
parameters/conditions/Swing = false
parameters/conditions/Throw = false
parameters/conditions/Walking = false
parameters/Idle/blend_position = Vector2(0.00959992, 0.801587)
parameters/Katana/blend_position = Vector2(0, 0)
parameters/Shuriken/blend_position = Vector2(0, 0)
parameters/Walking/blend_position = Vector2(0, 0)

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("11_q16l3")

[node name="Bars" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Healthbar" type="ProgressBar" parent="UI/Bars"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00868056
anchor_top = 0.848765
anchor_right = 0.138889
anchor_bottom = 0.895062
offset_left = -1.0
offset_top = -10.0
offset_right = -1.0
offset_bottom = -10.0
grow_horizontal = 2
max_value = 20.0
value = 20.0
show_percentage = false

[node name="HealthbarLabel" type="Label" parent="UI/Bars/Healthbar"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0112847
anchor_top = 0.83179
anchor_right = 0.133681
anchor_bottom = 0.878087
offset_left = -2.99996
offset_right = 5.9996
grow_horizontal = 2
theme_override_font_sizes/font_size = 15
text = "Health"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" type="ProgressBar" parent="UI/Bars"]
self_modulate = Color(0, 0.670588, 0, 1)
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00868056
anchor_top = 0.904321
anchor_right = 0.138889
anchor_bottom = 0.950617
offset_left = -1.0
offset_top = -10.0001
offset_right = -1.0
offset_bottom = -10.0001
grow_horizontal = 2
value = 100.0
show_percentage = false

[node name="StaminaText" type="Label" parent="UI/Bars/StaminaBar"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0112847
anchor_top = 0.888889
anchor_right = 0.141493
anchor_bottom = 0.935185
offset_left = -2.99996
offset_right = -2.99997
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
text = "Stamina"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="XPBar" type="ProgressBar" parent="UI/Bars"]
modulate = Color(1, 0, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0130208
anchor_top = 0.0231481
anchor_right = 0.273438
anchor_bottom = 0.0694444
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="XPLabel" type="Label" parent="UI/Bars/XPBar"]
modulate = Color(0, 0, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.133333
anchor_right = 0.99
anchor_bottom = 0.866667
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15
text = "XP: 10000 Needed: 10000"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="UI/Bars/XPBar"]
modulate = Color(0, 0, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00333333
anchor_top = 0.766667
anchor_right = 0.303333
anchor_bottom = 2.16667
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Level: "
metadata/_edit_use_anchors_ = true

[node name="ManaBar" type="ProgressBar" parent="UI/Bars"]
self_modulate = Color(0, 0, 1, 1)
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_top = 0.168
anchor_right = 0.169
anchor_bottom = 0.248
offset_left = 7.848
offset_top = 501.136
offset_right = -35.688
offset_bottom = 479.296
value = 100.0
show_percentage = false

[node name="ManaText" type="Label" parent="UI/Bars/ManaBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0133333
anchor_top = 0.0666667
anchor_right = 1.01333
anchor_bottom = 0.866665
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
theme_override_font_sizes/font_size = 15
text = "Mana"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HotBar" type="Control" parent="UI" node_paths=PackedStringArray("weaponmarker")]
layout_mode = 3
anchors_preset = 0
offset_left = 201.0
offset_right = 201.0
offset_bottom = 120.0
script = ExtResource("12_sa5fx")
weaponmarker = NodePath("../../Weapons/WeaponMarker")

[node name="Bar One" type="HBoxContainer" parent="UI/HotBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -120.0
offset_right = 134.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 8

[node name="Blink" type="VBoxContainer" parent="UI/HotBar/Bar One"]
layout_mode = 2

[node name="SlotNumber" type="Label" parent="UI/HotBar/Bar One/Blink"]
layout_mode = 2
text = " One"
horizontal_alignment = 1

[node name="Blinkbutton" type="TextureButton" parent="UI/HotBar/Bar One/Blink"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
shortcut = SubResource("Shortcut_1rjks")
texture_normal = ExtResource("17_f6xao")
ignore_texture_size = true
stretch_mode = 0

[node name="BlinkTag" type="Label" parent="UI/HotBar/Bar One/Blink"]
layout_mode = 2
text = "Blink
5 Mana"
horizontal_alignment = 1

[node name="Fireball" type="VBoxContainer" parent="UI/HotBar/Bar One"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="UI/HotBar/Bar One/Fireball"]
layout_mode = 2
text = "Two"
horizontal_alignment = 1

[node name="FireBall" type="TextureButton" parent="UI/HotBar/Bar One/Fireball"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
shortcut = SubResource("Shortcut_8enot")
texture_normal = ExtResource("18_5k20v")
ignore_texture_size = true
stretch_mode = 0

[node name="FireballTag" type="Label" parent="UI/HotBar/Bar One/Fireball"]
layout_mode = 2
text = "FireBall
10 Mana"
horizontal_alignment = 1

[node name="Familiar" type="VBoxContainer" parent="UI/HotBar/Bar One"]
layout_mode = 2

[node name="SlotNumber" type="Label" parent="UI/HotBar/Bar One/Familiar"]
layout_mode = 2
text = "Three"
horizontal_alignment = 1

[node name="Familiar Button" type="TextureButton" parent="UI/HotBar/Bar One/Familiar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
shortcut = SubResource("Shortcut_3fqht")
texture_normal = ExtResource("17_f6xao")
ignore_texture_size = true
stretch_mode = 0

[node name="SummonFamiliarTag" type="Label" parent="UI/HotBar/Bar One/Familiar"]
layout_mode = 2
text = "Familiar
10 Mana"
horizontal_alignment = 1

[node name="Timers" type="Node2D" parent="UI"]

[node name="Timer" type="Timer" parent="UI/Timers"]

[node name="CharacterSheet" parent="UI" instance=ExtResource("19_tfv02")]
process_mode = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
anchors_preset = -1
anchor_left = 0.869792
anchor_right = 1.0
anchor_bottom = 0.23
offset_left = -18.0
offset_top = 15.0
offset_right = -18.0
offset_bottom = 15.96
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="UI/SubViewportContainer" node_paths=PackedStringArray("player")]
handle_input_locally = false
size = Vector2i(149, 150)
render_target_update_mode = 4
script = ExtResource("20_3j1ig")
player = NodePath("../../..")

[node name="TutorialArea" parent="UI/SubViewportContainer/SubViewport" instance=ExtResource("21_g8y4q")]

[node name="Camera2D" type="Camera2D" parent="UI/SubViewportContainer/SubViewport"]
limit_left = 7
limit_top = 23
limit_right = 1152
limit_bottom = 1130

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/SubViewportContainer"]
position = Vector2(80.9996, 77)
sprite_frames = ExtResource("22_hsl8u")
animation = &"idle"
script = ExtResource("23_ag8cs")

[connection signal="timeout" from="Timers/Regeneration" to="." method="RegenTimer"]
[connection signal="area_entered" from="Areas/Tamaki Hitbox" to="." method="HitboxEntered"]
[connection signal="pressed" from="UI/HotBar/Bar One/Blink/Blinkbutton" to="UI/HotBar" method="blinkpressed"]
[connection signal="pressed" from="UI/HotBar/Bar One/Fireball/FireBall" to="UI/HotBar" method="fireballpressed"]
[connection signal="pressed" from="UI/HotBar/Bar One/Familiar/Familiar Button" to="UI/HotBar" method="Familiarpressed"]

[editable path="Weapons/Katana"]
[editable path="UI/CharacterSheet"]
